# DeepVein

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
config/: config.yml.example
functions/: isnull.py  plus.py
scripts/: loader_demo.py  query_registry_demo.py  query_runner_demo.py  udf_registry_demo.py
src/database/: __init__.py  database.py  database_factory.py  duckdb.py  sql_server.py
src/loader/: __init__.py  loader.py
src/query_registry/: __init__.py  models.py  registry.py  store.py
src/query_runner/: __init__.py  runner.py
src/udf/: __init__.py  registry.py
src/utils/: __init__.py  check_file_type.py  load_config.py  logger.py
storage/queries/: queries.yml
