[project]
name = "deepvein"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.1",
    "polars>=1.39.3",
    "pyodbc>=5.3.0",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.2.2",
]
